change login dialog messages

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -58,8 +58,8 @@
 
     <!-- Product and plugin compatibility requirements.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
-    <depends>com.intellij.modules.androidstudio</depends>
-<!--    <depends>com.intellij.modules.all</depends>-->
+<!--    <depends>com.intellij.modules.androidstudio</depends>-->
+    <depends>com.intellij.modules.all</depends>
 
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
