--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -64,8 +64,8 @@
 
     <!-- Product and plugin compatibility requirements.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
-    <depends>com.intellij.modules.androidstudio</depends>
-<!--    <depends>com.intellij.modules.all</depends>-->
+<!--    <depends>com.intellij.modules.androidstudio</depends>-->
+    <depends>com.intellij.modules.all</depends>
 
     <!-- Extension points defined by the plugin.
          Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
@@ -81,6 +81,10 @@
     <actions>
         <action id="com.dashwave.plugin.actions.BuildAction" class="com.dashwave.plugin.actions.BuildAction" text="DW Build"
                 description="dw-build" icon="icons/dashwave16.svg">
+            <add-to-group group-id="ToolbarRunGroup" anchor="before" relative-to-action="RunnerActions"/>
+        </action>
+        <action id="com.dashwave.plugin.actions.RunDebugAction" class="com.dashwave.plugin.actions.RunDebugAction" text="DW Debug"
+                description="dw-run-debugger" icon="icons/dashwave16.svg">
             <add-to-group group-id="ToolbarRunGroup" anchor="before" relative-to-action="RunnerActions"/>
         </action>
     </actions>
